--- a/angular.json
+++ b/angular.json
@@ -53,12 +53,7 @@
                 "input": "projects/authentication-page/public"
               }
             ],
-            "styles": [
-              "node_modules/primeng/resources/themes/saga-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "projects/authentication-page/src/styles.scss"
-            ]
+            "styles": ["projects/authentication-page/src/styles.scss"]
           },
           "configurations": {
             "production": {
