installing bootstrap library

--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,10 @@
                 "input": "projects/authentication-page/public"
               }
             ],
-            "styles": ["projects/authentication-page/src/styles.scss"]
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/authentication-page/src/styles.scss"
+            ]
           },
           "configurations": {
             "production": {
@@ -106,7 +109,10 @@
                 "input": "projects/authentication-page/public"
               }
             ],
-            "styles": ["projects/authentication-page/src/styles.scss"]
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/authentication-page/src/styles.scss"
+            ]
           }
         }
       }
@@ -135,7 +141,11 @@
                 "input": "projects/my-first-app/public"
               }
             ],
-            "styles": ["projects/my-first-app/src/styles.scss"]
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/my-first-app/src/styles.scss"
+            ],
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
           "configurations": {
             "production": {
@@ -188,7 +198,11 @@
                 "input": "projects/my-first-app/public"
               }
             ],
-            "styles": ["projects/my-first-app/src/styles.scss"]
+            "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "projects/my-first-app/src/styles.scss"
+            ],
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           }
         }
       }
