--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^20.3.0",
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
+    "@tailwindcss/cli": "^4.1.13",
     "bootstrap": "^5.3.8",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
