--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --project=my-first-app --ssl",
+    "start:form-builder": "ng serve --project=form-builder --ssl",
     "build": "npm run build:lib ng build",
     "watch": "ng build --watch --configuration development",
     "build:lib": "ng build my-lib",
@@ -34,12 +35,17 @@
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/cli": "^4.1.13",
+    "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
+    "dragula": "^3.7.3",
+    "font-awesome": "^4.7.0",
+    "ng2-dragula": "^6.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
     "rxjs": "^7.8.2",
     "tslib": "^2.3.0",
+    "uuid": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
