--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --project=my-first-app --ssl",
-    "start:admin": "ng serve --project=admin-generator --ssl",
     "start:form-builder": "ng serve --project=form-builder --ssl",
-    "build": "ng build admin-generator",
-    "build:all": "npm run build:lib && ng build",
+    "build": "npm run build:lib && ng build",
     "watch": "ng build --watch --configuration development",
     "build:lib": "ng build my-lib",
     "test": "ng test"
@@ -26,7 +24,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.3.0",
     "@angular/cdk": "^20.2.3",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
@@ -40,7 +37,9 @@
     "@tailwindcss/cli": "^4.1.13",
     "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
+    "dragula": "^3.7.3",
     "font-awesome": "^4.7.0",
+    "ng2-dragula": "^6.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
