--- a/package.json
+++ b/package.json
@@ -24,22 +24,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "20.3.1",
     "@angular/cdk": "^20.2.3",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
-    "@angular/forms": "^20.3.0",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/platform-server": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/common": "20.3.1",
+    "@angular/compiler": "20.3.1",
+    "@angular/core": "20.3.1",
+    "@angular/forms": "20.3.1",
+    "@angular/platform-browser": "20.3.1",
+    "@angular/platform-server": "20.3.1",
+    "@angular/router": "20.3.1",
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/cli": "^4.1.13",
     "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
-    "dragula": "^3.7.3",
     "font-awesome": "^4.7.0",
-    "ng2-dragula": "^6.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
@@ -49,9 +48,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.0",
-    "@angular/cli": "^20.3.0",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular/build": "20.3.1",
+    "@angular/cli": "20.3.1",
+    "@angular/compiler-cli": "20.3.1",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
