--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --project=my-first-app --ssl",
     "start:form-builder": "ng serve --project=form-builder --ssl",
+    "start:admin-generator": "ng serve --project=admin-generator --ssl",
     "build": "ng build admin-generator",
     "watch": "ng build --watch --configuration development",
     "build:lib": "ng build my-lib",
@@ -24,15 +25,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.3.1",
+    "@angular/animations": "^20.3.3",
     "@angular/cdk": "^20.2.3",
-    "@angular/common": "20.3.1",
-    "@angular/compiler": "20.3.1",
-    "@angular/core": "20.3.1",
-    "@angular/forms": "20.3.1",
-    "@angular/platform-browser": "20.3.1",
-    "@angular/platform-server": "20.3.1",
-    "@angular/router": "20.3.1",
+    "@angular/common": "20.3.3",
+    "@angular/compiler": "20.3.3",
+    "@angular/core": "20.3.3",
+    "@angular/forms": "20.3.3",
+    "@angular/platform-browser": "20.3.3",
+    "@angular/platform-server": "20.3.3",
+    "@angular/router": "20.3.3",
     "@primeuix/themes": "^1.2.3",
     "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/cli": "^4.1.13",
@@ -48,9 +49,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "20.3.1",
-    "@angular/cli": "20.3.1",
-    "@angular/compiler-cli": "20.3.1",
+    "@angular/build": "20.3.3",
+    "@angular/cli": "20.3.3",
+    "@angular/compiler-cli": "20.3.3",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
