--- a/angular.json
+++ b/angular.json
@@ -301,9 +301,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "projects/admin-generator/src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "projects/admin-generator/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -313,6 +311,8 @@
               }
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeicons/primeicons.css",
               "projects/admin-generator/src/styles.scss"
             ]
           },
@@ -358,10 +358,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "projects/admin-generator/tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -370,9 +367,7 @@
                 "input": "projects/admin-generator/public"
               }
             ],
-            "styles": [
-              "projects/admin-generator/src/styles.scss"
-            ]
+            "styles": ["projects/admin-generator/src/styles.scss"]
           }
         }
       }
