add dragula to package

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@tailwindcss/cli": "^4.1.13",
     "@types/uuid": "^10.0.0",
     "bootstrap": "^5.3.8",
+    "dragula": "^3.7.3",
     "font-awesome": "^4.7.0",
+    "ng2-dragula": "^6.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.1.2",
