--- a/projects/admin-generator/tsconfig.app.json
+++ b/projects/admin-generator/tsconfig.app.json
@@ -7,6 +7,6 @@
     "sourceMap": true,
     "types": []
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../my-lib/src/lib/shared/src/constants/components.ts"],
   "exclude": ["src/**/*.spec.ts"]
 }
