--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "ng": "ng",
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
-    "start": "ng serve --project=my-first-app --ssl",
-    "start:form-builder": "ng serve --project=form-builder --ssl --port=1200",
-    "admin": "ng serve --project=admin-generator --ssl",
-    "build": "ng build admin-generator",
-    "watch": "ng build --watch --configuration development",
+    "start": "nx serve --project=my-first-app --ssl",
+    "start:form-builder": "nx serve --project=form-builder --ssl --port=1200",
+    "admin": "nx serve --project=admin-generator --ssl",
+    "build": "nx build admin-generator",
+    "watch": "nx build --watch --configuration development",
     "migrate-prefix": "ts-node tools/scripts/update-prefix.ts",
-    "build:lib": "ng build my-lib",
-    "test": "ng test"
+    "build:lib": "nx build my-lib",
+    "test": "nx test"
   },
   "prettier": {
     "printWidth": 100,
@@ -59,9 +59,14 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/core": "20.3.3",
+    "@angular-devkit/schematics": "20.3.3",
     "@angular/build": "20.3.3",
     "@angular/cli": "20.3.3",
     "@angular/compiler-cli": "20.3.3",
+    "@nx/angular": "20.8.4",
+    "@nx/workspace": "20.8.4",
+    "@schematics/angular": "20.3.3",
     "@types/dragula": "^2.1.34",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
@@ -70,7 +75,6 @@
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-prettier": "^5.5.1",
-    "prettier": "^3.6.2",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -78,7 +82,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.2.0",
+    "nx": "20.8.4",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.9.2"
   },
