--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "ng": "ng",
     "format": "prettier --write \"**/*.{js,mjs,ts,mts,d.ts,html}\" --cache",
-    "start": "nx serve --project=my-first-app --ssl",
-    "start:form-builder": "nx serve --project=form-builder --ssl --port=1200",
-    "admin": "nx serve --project=admin-generator --ssl",
+    "start": "nx serve my-first-app --ssl",
+    "start:form-builder": "nx serve form-builder --ssl --port=1200",
+    "admin": "nx serve admin-generator --ssl",
     "build": "nx build admin-generator",
     "watch": "nx build --watch --configuration development",
     "migrate-prefix": "ts-node tools/scripts/update-prefix.ts",
@@ -64,9 +64,9 @@
     "@angular/build": "20.3.3",
     "@angular/cli": "20.3.3",
     "@angular/compiler-cli": "20.3.3",
-    "@nx/angular": "20.8.4",
-    "@nx/workspace": "20.8.4",
-    "@schematics/angular": "20.3.3",
+    "@nx/angular": "21.2.0",
+    "@nx/workspace": "21.2.0",
+    "@schematics/angular": "20.3.14",
     "@types/dragula": "^2.1.34",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
@@ -82,7 +82,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^20.2.0",
-    "nx": "20.8.4",
+    "nx": "21.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
